@@ -52,6 +52,7 @@ fail2ban_config()
     perl -pi -e 's#PH_SOGO_LOG_FILE#$ENV{SOGO_LOG_FILE}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
 
     perl -pi -e 's#PH_FAIL2BAN_DISABLED_SERVICES#$ENV{FAIL2BAN_DISABLED_SERVICES}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
+    perl -pi -e 's#PH_SSHD_PORT#$ENV{SSHD_PORT}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
 
     ECHO_DEBUG "Copy sample Fail2ban filter config files."
     cp -f ${SAMPLE_DIR}/fail2ban/filter.d/*.conf ${FAIL2BAN_FILTER_DIR}
